<resources>
    <string name="app_name">Login Screen</string>
    <string name="login_into_your_account">Login into your account</string>
    <string name="app_naav">App name</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="create_account">Create Account</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="country">Country</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="create">Create account</string>
</resources>